# TaskManager

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: mac_release.yml
docs/: Doxyfile  TaskManagerUML.graphml  UI_Concept.afdesign
src/: Main.qml  main.cpp
src/cpp/controllers/: TaskController.cpp  TaskController.h
src/cpp/models/: Task.cpp  Task.h  TaskModel.cpp  TaskModel.h
src/qml/components/: CustomButton.qml  TaskItem.qml
src/qml/dialogs/: AddTaskDialog.qml
src/qml/pages/: TaskListPage.qml
src/qml/styles/: AppTheme.qml
tests/: CMakeLists.txt
tests/integration/: test_integration.cpp
tests/qml/: test_runner.cpp
tests/unit/cpp/test_models/: test_task.cpp
tests/unit/qml/test_components/: TestTaskItem.qml
